--- a/style.css
+++ b/style.css
@@ -1,36 +1,76 @@
 @font-face {
-    font-family: main;
+    font-family: PP mori;
     src: url(Fonts/PPMori-Regular.otf);
 }
 
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-font-family: main;    
+    font-family: PP mori;
+    color: #fff;
 }
 
-html,body{
+html, body {
     height: 100%;
     width: 100%;
-    color: #fff;
-    background-color: #0F0D0D;
+}
+#purple{
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    position: fixed;
+    z-index: 100;
+    background-color: #EDBFFF;
+    opacity: 0;
+    display: none;
+    transition: opacity ease 1s;
 }
 
+.scroll{
+    display: flex;
+    overflow: hidden;
+    gap: 2vw;
+transition: all ease-in 0.4s;    
+margin-top: 30vh;
+}
+
+.scroll h3{
+  font-size: 4vw;
+  color: #0F0D0D;
+  text-wrap: nowrap;
+  animation-name: text;
+animation-duration: 1s;
+animation-timing-function: linear;
+animation-delay: 0.2s;
+animation-iteration-count: infinite;
+}
+
+@keyframes text {
+        0%{
+            transform: translate(10%);
+        }
+        
+        100%{
+               transform: translate(-100%);
+        }
+        }
+    
 .cursor{
-    height: 1.5vw;
-    width: 1.5vw;
+    height: 20px;
+    width: 20px;
     border-radius: 50%;
     position: fixed;
-    background-color: pink;
+    background-color: #EDBFFF;
     z-index: 8;
+    transition: background-image ease 0.5s;
+    background-position: center;
+    background-size:cover ;
     mix-blend-mode: difference;
-    transition:left linear 0.1s top linear 0.1s;
 }
-
 .main{
     background-color: #0F0D0D;
+    cursor: none;
 }
 
 .page1{
@@ -38,62 +78,71 @@ html,body{
     width: 100%;
     position: relative;
     z-index: 9;
+    padding-top: 5vw;
 }
+
 
 #nav{
-    height: 13vh;
+    height: 55px;
     width: 100%;
+    /* background-color: red; */
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0vw 2.2vw;
+    justify-content: space-between;
+    padding: 0 30px;
+    position: fixed;
+    mix-blend-mode: difference;
+    z-index:102;
+    margin-top: 2vh;
+    position: fixed;
+    cursor: pointer;
+    transition: all linear 0.3s;
+    
 }
-
 #nav img{
-    height: 2.2vw;
+    height: 27px;
 }
-
 #nav-part2{
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 1.5vw;
-    text-transform: uppercase;
+    justify-content: center;
+    gap: 20px;
 }
 
 #nav #circle{
-    height: 1.5vw;
-    width: 1.5vw;
+    height: 18px;
+    width: 18px;
     border-radius: 50%;
     background-color: #fff;
 }
-
 #nav h4{
-    font-size: 1.3vw;
-    font-weight: 100;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: uppercase;
 }
 #nav h4:nth-child(1){
-    border-bottom: 1px solid #fff;
+    border-bottom: 1.5px solid #fff;
 }
 
 .page1 h1{
-font-size: 8.5vw;
-font-weight: 100;   
-margin-top: 7vw;
-margin-left: 8vw;
-letter-spacing: -3px;
+    font-size: 8vw;
+    font-weight: 300;
+    font-family: PP mori;
+    margin-left: 6vw;
+    transform-origin: left;
+    margin-top: 12vh;
 }
-
 .page1 h2{
     font-size: 8vw;
-font-weight: 100;
-margin-left: 28vw;
-letter-spacing: -3px;
+    font-weight: 300;
+    transform-origin: left;
+
+    margin-left: 26vw;
 }
 
 .page1 video{
     width: 60%;
-    margin-top: 7vw;
+    margin-top: 10vw;
     position: relative;
     left: 50%;
     transform: translate(-50%,0);
@@ -102,198 +151,269 @@ letter-spacing: -3px;
 .page2{
     min-height: 80vh;
     width: 100%;
-    padding: 5vw 5vw;
-    border-bottom: 2px solid #888;
+    padding: 100px 5vw;
+    /* border-bottom: 2px solid #6c6c6c; */
+    
+    
+    
     position: relative;
     z-index: 9;
 }
 
 .page2 h1{
-    font-size: 7vw;
+    font-size:7vw;
     font-weight: 500;
-    color: #000;
-}
+    color: #111;
 
+}
 .page2-container{
     height: 60vh;
     width: 100%;
+    /* background-color: red; */
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    /* padding: 0 5vw; */
 }
-
 .page2-left{
-    width: 38%;
+    /* background-color: blue; */
+    width: 40%;
 }
-
 .page2-right{
-    width: 25%;
+    /* background-color: blue; */
+    width: 24%;
 }
-
 .page2-left h2{
-font-size: 4vw;
-font-weight: 100;
-font-weight:100;
-color:#111;
-line-height: 4vw;
+    font-size: 4vw;
+    font-weight: 300;
+    color: #111;
+    line-height: 4vw;
 }
-
 .page2-right p{
-    font-size: 2vw;
-    font-weight: 100;
-    color:#111;
-
+    font-size: 28px;
+    color: #111;
 }
-
 .page2-right button{
     width: 100%;
     border-radius: 50px;
     border: none;
-    padding: 0.3vw 0vw;
+    padding: 4px 0;
     background-color: #EDBFFF;
-    margin-top: 2vw;
+    color: #111;
+    margin-top: 20px;
 }
 
 .page3{
     min-height: 100vh;
     width: 100%;
-    padding-top: 8vw;
-    padding-bottom: 10vh;
+    padding-top: 100px;
     position: relative;
     z-index: 9;
-    border-bottom: 2px solid #888;
 }
 
 .page3 h1{
-    color: #111;
     font-size: 6.8vw;
-    font-weight: 500;
-    margin-left: 8vw;
+    font-weight: 300;
+    color: #111;
+    margin-left: 100px;
 }
-
 .page3-part1{
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     justify-content: space-between;
-}
 
+}
 .page3-part1 img{
-    height: 32vw;
-    margin-top: 28vh;
+    height: 400px;
+    margin-top: 160px;
 }
-
-
 .page3-part1 video{
-    height: 32vw;
+    height: 400px;
+    margin-top: 40px;
 }
 
 
 .page3-part2{
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     justify-content: space-between;
-}
 
+}
 .page3-part2 img{
-    height: 35vw;
-    margin-right: 5vw;
+    height: 430px;
+    margin-right: 3vw;
 }
-
-
 .page3-part2 video{
-    height: 35vw;
-    margin-top: 20vh;
+    height: 450px;
+    margin-top: 8vh;
+    margin-left: 2vw;
 }
 
 .page3-last{
-    color: #000;
+    margin-top: 5vh;
     display: flex;
+    align-content: center;
     justify-content: space-between;
-    align-items: center;
     padding: 0vw 3vw;
-    margin-top: 8vh;
 }
 
 .page3-last h3{
     font-size: 4vw;
-    font-weight: 500;
+    margin-top: 3vh;
 }
 
 .page3-last button{
-    font-size: 1vw;
+    color: #0F0D0D;
     padding: 5vw 3vw;
-    border-radius: 50%;
     border: none;
-    background-color: pink;
+    border-radius: 50%;
+    margin-top: -4vh;
+    font-family:PP mori;
+    font-size: 1.2vw;
+    font-weight: 600;
     cursor: pointer;
+    background-color: lightpink;
 }
 
 .page3-last button:hover{
-    background-color: lightblue;
+background-color: lightblue;
 }
-
 .page4{
     min-height: 100vh;
     width: 100%;
-    background-color: #111;
-    position: relative;
     z-index: 9;
-    padding: 10vw;
+    position: relative;
+    padding: 170px 100px;
 }
-
 .elem{
+    /* background-color: salmon; */
+    margin-bottom: 10px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     position: relative;
 }
-
 .elem img{
     position: absolute;
-    height: 60vh;
     opacity: 0;
-    transition: all ease 0.5s;
+    transition: all ease-out 0.5s;
     transform: translateY(10%) rotate(2deg);
 }
-
 .elem img:nth-child(1){
     left: 2%;
 }
-
-
 .elem img:nth-child(3){
-    right: -9%;
-    height: 45vh;
+    right: 5%;
 }
-
 .text-div{
-    height: 18vh;
+    height: 16vh;
     position: relative;
-    overflow: hidden;
     z-index: 9;
+    overflow: hidden;
 }
-
 .elem h1{
     font-size: 7.5vw;
-    cursor: pointer;
-    transition: all ease-in-out 0.5s;
+    font-weight: 600;
+    transition: all ease-out 0.5s;
 }
 
 .elem:hover h1{
     transform: translateY(-100%);
+    color: #EDBFFF;
 }
-
 .elem:hover img{
- opacity: 1;
- transform: translateY(0%) rotate(0deg);
+    opacity: 1;
+    transform: translateY(0%) rotate(0deg);
+
 }
 
 
 .page5{
     min-height: 100vh;
     width: 100%;
-    background-color: #888;
     position: relative;
     z-index: 9;
+    padding: 140px 100px;
+}
+.page5 h2{
+    font-size: 4vw;
+    text-transform: uppercase;
+    font-weight: 400;
+    margin-bottom: 50px;
+}
+.box{
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+    padding: 0 20px;
+    border-top: 2px solid #dadada;
 }
 
+.box:nth-last-child(1){
+    border-bottom: 2px solid #dadada;
+
+}
+
+
+footer{
+    height: 55vh;
+    width: 100%;
+    background-color: #ecc7fa;
+}
+
+footer a{
+    text-decoration: none;
+    color: #0F0D0D;
+    font-family: PP mori;   
+    font-size: 1.2vw;
+}
+
+footer h3{
+    font-size: 2vw;
+    color: #0F0D0D;
+    font-family: PP mori;
+    padding-top: 10vh;
+    margin-left: 3vw;
+}
+
+.footer-part{
+    display: flex;
+    margin-left: 2vw;
+}
+
+.footer-1{
+    margin-top: 20vh;
+    margin-left: 3vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+
+.footer-2{
+    margin-top: 20vh;
+    margin-left: 3vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+
+.footer-3{
+    margin-top: 20vh;
+    margin-left: 3vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+
+.footer-4{
+    margin-top: 20vh;
+    margin-left: 43vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
